--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-redux": "^7.2.8",
+    "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.0",
+    "react-touch-drag-slider": "^2.1.3",
     "redux": "^4.1.2",
     "web-vitals": "^2.1.4"
   },
